compiler/testData/asJava/lightClasses/compilationErrors/ActualClass.java
public final class B /* p.B*/ {
  @null()
  public  B();//  .ctor()

}